--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yml
 name: Deploy to Netlify
 
 on:
@@ -12,24 +11,24 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated version
+        uses: actions/checkout@v3  # Update to the latest version
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Updated version
+        uses: actions/setup-node@v3  # Update to the latest version
         with:
-          node-version: '20'  # Use the latest LTS or your required Node.js version
+          node-version: '20'  # Update to Node.js 20, as Node.js 16 is deprecated
 
       - name: Install dependencies
         run: npm install
 
       - name: Build project
-        run: npm run build   # Adjust if necessary for your build command
+        run: npm run build  # Ensure this is the correct build command
 
       - name: Deploy to Netlify
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         run: |
           curl -s -H "Authorization: Bearer $NETLIFY_AUTH_TOKEN" \
-            -F "file=@build" \
+            -F "file=@dist/tourexpertsmean" \  # Adjust path if needed
             -F "clear=true" \
             https://api.netlify.com/api/v1/sites/fb81c2ed-c270-4684-b4a9-6363dbd57e19/deploys
