--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,24 +11,24 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Update to the latest version
+        uses: actions/checkout@v3  # Updated to v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Update to the latest version
+        uses: actions/setup-node@v3  # Updated to v3
         with:
-          node-version: '20'  # Update to Node.js 20, as Node.js 16 is deprecated
+          node-version: '18'  # Updated to a newer version, if necessary
 
       - name: Install dependencies
         run: npm install
 
       - name: Build project
-        run: npm run build  # Ensure this is the correct build command
+        run: npm run build --configuration=production  # Ensure this matches your build command
 
       - name: Deploy to Netlify
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         run: |
           curl -s -H "Authorization: Bearer $NETLIFY_AUTH_TOKEN" \
-            -F "file=@dist/tourexpertsmean" \  # Adjust path if needed
+            -F "file=@dist/tourexpertsmean" \  # Ensure this path is correct
             -F "clear=true" \
             https://api.netlify.com/api/v1/sites/fb81c2ed-c270-4684-b4a9-6363dbd57e19/deploys
