--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 
-  publish = "dist/tourexpertsmean/browser"
+  publish = "dist/tourexpertsmean"
  command = "ng build --configuration=production"
 
 [[plugins]]
