--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "async": "^3.2.5",
+    "aws-sdk": "^2.1677.0",
     "bootstrap": "^5.3.3",
+    "mime": "^4.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
