--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "async": "^3.2.5",
     "aws-sdk": "^2.1677.0",
     "bootstrap": "^5.3.3",
+    "flag-icons": "^7.2.3",
     "mime": "^4.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
